# talk-to-me-claude-cli

./: .env.example  BACKLOG.md  CLAUDE.md  HOOKS.md  INSTALLATION.md  INSTALL_GUIDE.md  MCP_SERVER_SETUP.md  PROVIDERS.md  QUICKSTART.md  README.md  SETUP_VERIFIED.md  install-remote.sh  install.py  install.sh  pyproject.toml  requirements.txt  speak_narration.sh  test_basic.py  test_providers.py
.claude/: hooks.json  settings.json
.claude/commands/talk-to-me/: commands.json  listen.md  mode.md  status.md
.claude/hooks/: session-start-tts.sh
docs/: AGENTVIBES_COMPARISON.md  QUICK_VOICE_INPUT.md  VOICE_CONVERSATION_GUIDE.md
hooks/: inject_narration_prompt.py  inject_narration_prompt.sh  mode_manager.sh  process_response.py  process_response.sh  speak_narration_bg.py  test_simple.sh  voice_input.sh
src/: __init__.py  extractor.py  prompt.py  wrapper.py
src/mcp_server/: __init__.py  resources.py  server.py  session.py  tools.py  voice_controller.py
src/voice/: __init__.py  stt.py  tts.py
tests/: __init__.py
tests/integration/: test_e2e_conversation.py  test_mcp_server.py
tests/unit/: test_session.py  test_tools.py  test_voice_controller.py
